--- a/Task12/Task12.csproj
+++ b/Task12/Task12.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToyBankLib\ToyBankLib.csproj" />
+    <ProjectReference Include="..\WPFUsefullThings\WPFUsefullThings.csproj" />
   </ItemGroup>
 
 </Project>
